// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@presenter/auth/register fails to register user when bio exceeds number of characters 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "bio",
      "message": "Expected string with a length between 0 and 65535 characters",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when date_of_birth is not valid date 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "date_of_birth",
      "message": "Invalid date",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when email is missing out of required properties 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "email",
      "message": "Invalid email",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when first_name is invalid 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "first_name",
      "message": "Expected string with a length between 0 and 255 characters",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when gender is invalid 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "gender",
      "message": "Expected one of the following: female, male",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when last_name is invalid 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "last_name",
      "message": "Expected string with a length between 0 and 255 characters",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when password and password_confirmation are not matching 1`] = `
Object {
  "errors": Array [
    Object {
      "fields": Array [
        "password",
        "password_confirmation",
      ],
      "message": "Expected password to match password_confirmation",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when password is missing out of required properties 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "password",
      "message": "Expected string minimum 8 characters long, containing at least: 1 upper and 1 lower case, 1 digit and 1 special characters i.e. one of the following: #?!@$%^&*-",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user when password_confirmation is missing out of required properties 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "password_confirmation",
      "message": "Expected string minimum 8 characters long, containing at least: 1 upper and 1 lower case, 1 digit and 1 special characters i.e. one of the following: #?!@$%^&*-",
    },
  ],
  "message": "Validation failed",
}
`;

exports[`@presenter/auth/register fails to register user without required fields 1`] = `
Object {
  "errors": Array [
    Object {
      "field": "email",
      "message": "Invalid email",
    },
    Object {
      "field": "password",
      "message": "Expected string minimum 8 characters long, containing at least: 1 upper and 1 lower case, 1 digit and 1 special characters i.e. one of the following: #?!@$%^&*-",
    },
    Object {
      "field": "password_confirmation",
      "message": "Expected string minimum 8 characters long, containing at least: 1 upper and 1 lower case, 1 digit and 1 special characters i.e. one of the following: #?!@$%^&*-",
    },
  ],
  "message": "Validation failed",
}
`;
